Add rest endpoint to add task

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,6 +5,9 @@ micronaut:
     static-resources:
       default:
         paths: classpath:static
+  serde:
+    serialization:
+      inclusion: always
 
 app:
   version: ${version}
