Fix bug where the wrong completion row was reverted

--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -3,6 +3,6 @@ app:
 
 datasources:
   default:
-    url: jdbc:postgresql://localhost:5432/chores
+    url: jdbc:postgresql://localhost:5432/chores?currentSchema=test
     username: local-user
     password: local-password
