Support setting a context-path for the website
The Raspberry Pi this app is hosted on hosts other services too. Ideally, these would be namespaced by subdomains, but I cannot set up subdomains on my local network without getting a new router. Instead, the services will be namespaced by url path, e.g this app will be available at http://pi.local/chores. Thankfully Micronaut supports setting a context-path, which is the root path from which all pages/endpoints are served.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,6 +8,8 @@ micronaut:
   serde:
     serialization:
       inclusion: always
+  server:
+    context-path: ${MICRONAUT_SERVER_CONTEXT_PATH:/}
 
 app:
   version: ${version}
