Handle loading static content with a context-path

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,6 +5,7 @@ micronaut:
     static-resources:
       default:
         paths: classpath:static
+        mapping: ${micronaut.server.context-path}/**
   serde:
     serialization:
       inclusion: always
